with image carousel

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body{
+	margin-bottom: 80px;
+}
+
 .page-header{
 	margin-top: 0;
 }
@@ -9,3 +13,7 @@
 .featureImg{
 	margin-bottom: 15px;
 }
+
+/*#myCarousel .item{
+	height: 400px;
+}*/
